[tool.poetry]
name = "pylady"
version = "0.1.0"
description = "A python wrapper for the MiLaDy code"
authors = ["Arnaud Allera <arnaud.allera@cea.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
numpy = "^1.22.4"
ase = "^3.22.1"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"
pandas = "*"
Jinja2 = "*"
pytest = "^7.1.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pylady = "pylady.cli:cli"